pkg/lang/testdata/ub/stack-values/invalid/pin-entry-missing-revision.ub
factory: { pin: { supported-versions: [{ version: 'v1' }] } }
